force-app/main/default/objects/Best_Practices__kav/fields/Advanced_Features__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Features__c</fullName>
    <description>Any features that are not normally used</description>
    <inlineHelpText>Please list any advanced features the office could use.</inlineHelpText>
    <label>Advanced Features</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>