force-app/main/default/objects/Best_Practices__kav/fields/Available_Settings__c.field-meta.xml
<CustomField>
    <fullName>Available_Settings__c</fullName>
    <description>List of settings that are available for this feature.</description>
    <inlineHelpText>Please list the available settings, any restrictions or considerations.</inlineHelpText>
    <label>Available Settings</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>