force-app/main/default/objects/Best_Practices__kav/fields/Introduction__c.field-meta.xml
<CustomField>
    <fullName>Introduction__c</fullName>
    <description>A place to briefly introduce the article</description>
    <inlineHelpText>Please put in an Introduction to this article.</inlineHelpText>
    <label>Introduction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>