force-app/main/default/objects/Best_Practices__kav/fields/Points_to_Consider__c.field-meta.xml
<CustomField>
    <fullName>Points_to_Consider__c</fullName>
    <description>Anything an office would like to know</description>
    <inlineHelpText>Please list anything that the office should consider before changing settings.</inlineHelpText>
    <label>Points to Consider</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>