force-app/main/default/objects/Best_Practices__kav/fields/Recommended_Settings__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Settings__c</fullName>
    <description>The main settings recommendations area</description>
    <inlineHelpText>Please enter the settings that you are recommending.</inlineHelpText>
    <label>Recommended Settings</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>